# GTK3-Base

./: Cargo.toml  README.md
src/: main.rs  window.rs
src/resources/: style.css
